Fix form button, was not centered on wide display

--- a/src/stylesheets/Form.css
+++ b/src/stylesheets/Form.css
@@ -61,3 +61,10 @@
   font-size: 1rem;
   color: rgba(0, 0, 0, 0.5);
 }
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0 0;
+}
